--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -10,7 +10,6 @@
 
 html {
     @apply font-body;
-    @apply bg-cream;
 }
 
 h1 {
@@ -24,12 +23,10 @@ h3 {
 }
 
 a {
-    @apply text-slate;
-    @apply border-solid;
-    @apply border-b-2;
+    @apply text-gray;
 }
 
 a:hover,
 a:focus {
-    @apply text-black;
+    @apply text-slate;
 }
